# Binary

./: .gitignore  CMakeLists.txt  README.md
src/: binary.c  binary.h
